--- a/Visual Studio/C#/ConsoleApp1/ConsoleApp1.csproj
+++ b/Visual Studio/C#/ConsoleApp1/ConsoleApp1.csproj
@@ -40,6 +40,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -50,6 +51,11 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <Import Project="..\Eruru.Http For Shared Project\Eruru.Http For Shared Project.projitems" Label="Shared" />
+  <ItemGroup>
+    <ProjectReference Include="..\Eruru.Http\Eruru.Http.csproj">
+      <Project>{e4fdd281-bf7b-4e48-a353-25540d2be300}</Project>
+      <Name>Eruru.Http</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
