--- a/Visual Studio/C#/Eruru.Http/Eruru.Http.csproj
+++ b/Visual Studio/C#/Eruru.Http/Eruru.Http.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net20;netstandard2.0</TargetFrameworks>
-		<Version>1.0.0.1</Version>
+		<TargetFrameworks>net20;net35;net40;net45;netstandard2.0</TargetFrameworks>
+		<Version>1.0.0.3</Version>
 	</PropertyGroup>
 
 	<Import Project="..\Eruru.Http For Shared Project\Eruru.Http For Shared Project.projitems" Label="Shared" />
